Add fixed notification banner to index.html
Added a fixed notification banner at the top of the page.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+  <div style="position:fixed;top:0;left:0;z-index:99999;background:#ff0;color:#000;padding:6px 10px;font-weight:700;">
+  TEST-LIVE-123
+</div>
   <!-- Top navigation -->
   <header class="topbar">
     <div class="container topbar-inner">
