--- a/index.html
+++ b/index.html
@@ -5,7 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Xi Fang</title>
   <meta name="description" content="Xi Fang — Postdoctoral Associate at Yale School of Public Health, Ph.D in Biostatistics" />
-  <link rel="stylesheet" href="assets/css/style.css?v=17" />
+<link rel="stylesheet" href="assets/css/style.css?v=999" />
+
+<style>
+  /* FORCE shrink hero (banner area) and avatar to ~10% */
+  .hero { min-height: 55px !important; }
+  .hero-inner { padding: 6px 0 !important; }
+  .avatar { width: 14px !important; height: 14px !important; border-width: 1px !important; box-shadow: none !important; margin-bottom: 2px !important; }
+
+  /* Shrink/hide hero text so it doesn't force the banner taller */
+  .hero h1 { font-size: 14px !important; margin: 0 !important; }
+  .subtitle, .tagline, .hero-links, .social { display: none !important; }
+
+  /* Optional: remove overlap that can make hero feel big */
+  .main { margin-top: -10px !important; }
+</style>
+
 
 </head>
 
